@@ -1,14 +1,13 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    namespace 'com.github.skykai.stickercamera'
+    compileSdk 36
 
     defaultConfig {
         applicationId "com.github.skykai.stickercamera"
-        minSdkVersion 15
-        targetSdkVersion 22
+        minSdk 26
+        targetSdk 36
         versionCode 1
         versionName "1.0"
     }
@@ -18,26 +17,41 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
 }
 
+// ButterKnife 10.x 的注解处理器需访问 JDK 内部 javac API;JDK 16+ 默认封装,
+// 通过 --add-exports/--add-opens 放行(保留 ButterKnife 所需的标准解法)。
+tasks.withType(JavaCompile).configureEach {
+    options.fork = true
+    options.forkOptions.jvmArgs += [
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
+    ]
+}
+
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
-    compile 'com.android.support:recyclerview-v7:22.2.0'
-    compile 'com.android.support:cardview-v7:22.2.0'
-    compile 'com.jakewharton:butterknife:6.1.0'
-    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
-    compile 'com.melnykov:floatingactionbutton:1.3.0'
-    compile 'com.rengwuxian.materialedittext:library:2.1.3'
-    compile files('libs/fastjson-1.2.5.jar')
-    compile files('universal-image-loader-1.9.4.jar')
-    compile 'it.sephiroth.android.library.horizontallistview:hlistview:1.2.2'
-    compile project(":Gpu-Image")
-    compile project(":ImageViewTouch")
-    compile 'de.greenrobot:eventbus:2.4.0'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.core:core:1.13.1'
+    implementation 'androidx.fragment:fragment:1.8.5'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.jakewharton:butterknife:10.2.3'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
+    implementation 'com.alibaba:fastjson:1.2.83'
+    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.5'
+    implementation 'org.greenrobot:eventbus:3.3.1'
+    implementation project(':Gpu-Image')
+    implementation project(':ImageViewTouch')
 }
